# miaoreader

./: AGENTS.md  CLAUDE.md  CMakeLists.txt  DESIGN.md  README.md  STATUS.md  platformio.ini  requires_01.md  sdkconfig.esp32s3
app/: .gitignore  CMakeLists.txt  Makefile  README.md  reader_sim  renderer_eink.c  renderer_if.h  renderer_sdl.c  sim_main.c
app/data/: reading_data.json
app/shared/books/: 奇妙的盘算社团（一部帮助青少年了解金钱、认识经济、树立正确的职业观、价值观的青春成长小说。 口碑炸裂，长期荣登亚马逊经济学入门前列）... (Z-Library).epub  测试书籍.txt
app/shared/compat/: esp_err.h  esp_log.h  freertos.h
app/shared/engine/: book_parser.c  book_parser.h  typesetter.c  typesetter.h
app/shared/mock/: mock_bookmark.c  mock_bookmark.h  mock_books.c  mock_books.h  mock_rtc.c  mock_rtc.h  mock_weather.c  mock_weather.h  mock_wifi.c  mock_wifi.h
app/shared/storage/: book_storage.c  book_storage.h  reading_progress.c  reading_progress.h
app/shared/ui/: menu_bar.c  menu_bar.h  page_bookshelf.c  page_bookshelf.h  page_boot.c  page_boot.h  page_home.c  page_home.h  page_jump.c  page_jump.h  page_menu.c  page_menu.h  page_mgr.c  page_mgr.h  page_reader.c  page_reader.h  page_settings.c  page_settings.h  page_sleep.c  page_sleep.h  status_bar.c  status_bar.h  (+2 more)
src/: CMakeLists.txt  idf_component.yml  main.c
src/engine/: book_meta.c  book_meta.h  book_parser.c  book_parser.h  bookmark.c  bookmark.h  config.c  config.h  event_bus.c  event_bus.h  gbk_table.h  power_mgr.c  power_mgr.h  reading_stats.c  reading_stats.h  types.h  typesetter.c  typesetter.h
src/hal/: battery.c  battery.h  epd.c  epd.h  keys.c  keys.h  rtc.c  rtc.h  sd_card.c  sd_card.h  wifi_mgr.c  wifi_mgr.h
src/net/: ota.c  ota.h  sntp.c  sntp.h  weather.c  weather.h  web_server.c  web_server.h
src/ui/: font_data.h  page_bookshelf.c  page_bookshelf.h  page_boot.c  page_boot.h  page_home.c  page_home.h  page_jump.c  page_jump.h  page_menu.c  page_menu.h  page_mgr.c  page_mgr.h  page_reader.c  page_reader.h  page_settings.c  page_settings.h  page_sleep.c  page_sleep.h  status_bar.c  status_bar.h  widget.c  widget.h
(+10 files in other folders)
