idf_component_register(
    SRCS "main.c"
         "engine/config.c"
         "engine/event_bus.c"
         "engine/typesetter.c"
         "engine/book_parser.c"
         "engine/power_mgr.c"
         "engine/bookmark.c"
         "hal/epd.c"
         "hal/keys.c"
         "hal/battery.c"
         "hal/rtc.c"
         "hal/sd_card.c"
         "hal/wifi_mgr.c"
         "net/sntp.c"
         "net/weather.c"
         "net/web_server.c"
         "net/ota.c"
         "ui/page_mgr.c"
         "ui/widget.c"
         "ui/status_bar.c"
         "ui/page_home.c"
         "ui/page_bookshelf.c"
         "ui/page_reader.c"
         "ui/page_settings.c"
         "ui/page_sleep.c"
         "ui/page_boot.c"
         "ui/page_menu.c"
         "ui/page_jump.c"
    INCLUDE_DIRS "."
    REQUIRES driver esp_wifi esp_netif nvs_flash esp_timer freetype espressif__cjson esp_http_server esp_http_client esp_event app_update
)
